--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div class="well">
-					<p>Add an animal</p>
-					<input type="text" class="form-control" id="topicInput" placeholder="Giphy Topic">
-					<br>
-					<input class="btn btn-default" type="submit" value="Submit">
+					<form id="giphy-form">
+				      <label for="animal-input">Add an animal</label> 
+				      <br>
+				      <input type="text" id="animal-input">
+				      <br>
+				      <br>
+				      <input id="add-topic" type="submit" value="Adding Topic">
+				    </form>
 				</div><!--input well-->
-				<div class="well">
-					<button id="testingButton">testing</button>
+				<div class="well buttons">
+					
   
 				</div><!--where the buttons will go-->
 			</div>
