--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<div class="col-md-3">
 				<div class="well">
 					<form id="giphy-form">
-				      <label for="animal-input">Add an animal</label> 
+				      <label for="topic-input">Add an animal</label> 
 				      <br>
-				      <input type="text" id="animal-input">
+				      <input type="text" id="topic-input" class="topic">
 				      <br>
 				      <br>
 				      <input id="add-topic" type="submit" value="Adding Topic">
