fixec input form problem

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
 			<div class="col-md-3">
 				<div class="well">
 					<form id="giphy-form">
-				      <label for="topic-input">Add an animal</label> 
+				      <label for="topic-input">Add a topic!</label> 
 				      <br>
-				      <input type="text" id="topic-input" class="topic">
+				      <input type="text" id="topic-input" >
 				      <br>
 				      <br>
 				      <input id="add-topic" type="submit" value="Adding Topic">
 				    </form>
 				</div><!--input well-->
 				<div class="well buttons">
-					
+					<button class="topic" data-name="dog">dog</button>
+					<button class="topic" data-name="cat">cat</button>
   
 				</div><!--where the buttons will go-->
 			</div>
