--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+	<!--googlefonts-->
+	<link href="https://fonts.googleapis.com/css?family=Audiowide|Bangers|Luckiest+Guy" rel="stylesheet">
+
 	<!--my css-->
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
