--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 				    </form>
 				</div><!--input well-->
 				<div class="well buttons">
-					<button class="topic" data-name="dog">dog</button>
-					<button class="topic" data-name="cat">cat</button>
+					<button class="topic" data-name="marilyn monroe">marilyn monroe</button>
+					<button class="topic" data-name="elizabeth taylor">elizabeth taylor</button>
+					<button class="topic" data-name="sidney poitier">sidney poitier</button>
+					<button class="topic" data-name="james dean">james dean</button>
+					<button class="topic" data-name="humphrey bogart">humphrey bogart</button>
   
 				</div><!--where the buttons will go-->
 			</div>
