--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h1>Let's Have Some Giphy Fun!!</h1>
+				<h1 class="title">Let's Have Some Giphy Fun!!</h1>
 			</div>
 		</div><!--Header row-->
 		<br>
