--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row">
+		<div class="row title">
 			<div class="col-md-12 text-center">
-				<h1 class="title">Let's Have Some Giphy Fun!!</h1>
+				<h1>Pick your favourite film star!</h1>
 			</div>
 		</div><!--Header row-->
 		<br>
 		<div class="row">
 			<div class="col-md-3">
-				<div class="well">
+				<div class="well leftSide">
 					<form id="giphy-form">
-				      <label for="topic-input">Add a topic!</label> 
+				      <label for="topic-input">Press any button to the stars come to life (if just for a moment). Or you can add your own by typing in the box below.</label> 
 				      <br>
 				      <input type="text" id="topic-input" >
 				      <br>
@@ -36,7 +36,7 @@
 				      <input id="add-topic" type="submit" value="Adding Topic">
 				    </form>
 				</div><!--input well-->
-				<div class="well buttons">
+				<div class="well buttons leftSide">
 					<button class="topic" data-name="marilyn monroe">marilyn monroe</button>
 					<button class="topic" data-name="elizabeth taylor">elizabeth taylor</button>
 					<button class="topic" data-name="sidney poitier">sidney poitier</button>
