grammatical errors fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			<div class="col-md-3">
 				<div class="well leftSide">
 					<form id="giphy-form">
-				      <label for="topic-input">Press any button to the stars come to life (if just for a moment). Or you can add your own by typing in the box below.</label> 
+				      <label for="topic-input">Press any button in the box below and make the stars come to life (if just for a moment).<br>
+				      Or you can add your own by typing in the box below.</label> 
 				      <br>
 				      <input type="text" id="topic-input" >
 				      <br>
