--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row title">
+		<div class="row well title">
 			<div class="col-md-12 text-center">
 				<h1>Pick your favourite film star!</h1>
 			</div>
@@ -47,9 +47,11 @@
 				</div><!--where the buttons will go-->
 			</div>
 			<div class="col-md-9">
-			<div id="images">
- 			 </div>
-				<!--where the images go-->
+				<div class="row well title text-center picgif">
+					<h3 ">Click on the pic to see the gif!</h3>
+				</div>
+			<div id="images"></div><!--where the images go-->
+				
 			</div>
 		</div>
 	</div>
